# consect

./: .gitignore  FEATURES.md  README.md  package.json
.claude/: launch.json
embedding-service/: .gitignore  env.py  main.py  pyproject.toml
embedding-service/clients/: document_reader.py  embedding_cache.py  llm.py  vector_da.py
embedding-service/lib/: chunking.py
embedding-service/models/: req_models.py
server/: auth-schema.ts  docker-compose.yml  drizzle.config.js  package.json  pnpm-lock.yaml  tsconfig.json
server/drizzle/: 0001_burly_nehzno.sql  0002_mature_psynapse.sql  0003_sharp_polaris.sql  0004_tricky_iceman.sql  0005_graceful_kulan_gath.sql  0006_flowery_prism.sql  0007_cloudy_gladiator.sql  0008_bent_ghost_rider.sql  0009_ambiguous_blink.sql  0011_naive_kronos.sql  0012_strange_drax.sql  0013_low_unicorn.sql  0014_real_thunderball.sql  0015_luxuriant_reptil.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  _journal.json
server/src/: env.ts  server.ts
server/src/app/: express.ts
web/: package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx
web/src/hooks/: use-ai-hub.ts  use-api.ts  use-auth.ts  use-conversations.ts  use-messages.ts  use-notifications.ts  use-organization.ts  use-preference.ts  use-search.ts
web/src/lib/: assets.ts  (+6 more)
(+122 files in other folders)
