[project]
name = "embedding-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]
